# aktos_api

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
aktos_api/: asgi.py  settings.py  urls.py  wsgi.py
