[tool.poetry]
name = "aktos-api"
version = "0.1.0"
description = ""
authors = ["Yoel Monzón <yoelfme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
requests = "^2.32.3"
dj-database-url = "^2.2.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
